<resources>
    <string name="app_name">Organik Balkon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shared_image">sharedimage</string>
    <string name="history">Geçmiş Analizler</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_size">Bitkinizin Mevcut Boyu</string>
    <string name="pot_size">Saksınızın Boyu</string>
    <string name="plant_name_field">Yeni Bitkinizin İsmini Giriniz</string>
    <string name="my_plant">Benim Çiçeğim</string>
    <string name="take_picture">Resim Çek</string>
    <string name="add_plant">Yeni Bitkimi Ekle</string>
    <string name="no_connection">Ağa Bağlanılamadı</string>
    <string name="placeholder">Lorem ipsum simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500sunto make a type specimen book. It has survived  </string>
    <string name="placeholder_small_pot">Küçük</string>
    <string name="placeholder_small">Küçük</string>
    <string name="placeholder_medium">Orta</string>
    <string name="placeholder_big">Büyük</string>
    <string name="placeholder_huge">Çok Büyük</string>
    <string name="form_fill_alert">Lütfen Bitkinizi Eklemeden Önce Formu Doldurunuz</string>
    <string name="plant_add">Bitkiniz Eklendi</string>
    <string name="plant_add_failed">Bitki Eklemesi Başarısız</string>
    <string name="password">Şifre</string>
    <string name="usernameOrEmail">E-posta veya Kullanıcı adı</string>
    <string name="login">Giriş</string>
    <string name="logout">Çıkış</string>
    <string name="sens_ph">Sensör PH</string>
    <string name="sens_temp">Sensör Sıcaklık</string>
    <string name="sens_humidity">Sensör  Nemi</string>
    <string name="sens_light">Sensör Işık</string>
    <string name="water_icon">Su İkonu</string>
    <string name="temp_icon">Sıcaklık İkonu</string>
    <string name="ph_icon">PH İkonu</string>
    <string name="sunny_icon">Güneş İkonu</string>
    <string name="update_sensor">Senör Değerlerini Kaydet</string>
    <string name="error_perm">Bu Araç Kamera Ve Dosya İzni Gerektiriyor</string>
    <string name="common_err">Ooops Bir şeyler yanlış gitti :(</string>
    <string name="update_form_alert">Lütfen Formu Doldurun</string>
    <string name="plant_value_update">Sensör Değerli Güncellenmiştir</string>
    <string name="register">Kayıt Ol</string>
    <string name="username">Kullancı Adı</string>
    <string name="first_name">Adınız</string>
    <string name="lastname">Soyadınız</string>
    <string name="email">Email</string>
    <string name="address">Adres</string>
    <string name="phone">Telefon</string>
    <string name="register_now"><u> Şimdi Kayıt Ol! </u></string>
    <string name="register_form_alert">Lütfen Formu Düzgün Doldurunuz</string>
    <string name="register_form_failed">Email veya Kullancı Adı Mevcut Lütfen Farklı Deneyiniz</string>
    <string name="register_succsessfull">Kayıt Başarılı</string>
    <string name="loginError">Kullanıcı adı veya şifre hatalı!</string>
    <string name="noPlantInfo">Henüz bitkiniz bulunmamaktadır hemen eklemek için butona basınız!</string>
    <string name="addFirstPlant">Bitki Ekle</string>
    <string name="profile">Profil</string>
    <string name="profile_header">Kişisel Bilgiler</string>
    <string name="update_user_info">Değişiklikleri Kaydet</string>
    <string name="reset_password">Parolayı Sıfırla</string>
    <string name="reset_password_header">Parola Sıfırla</string>
    <string name="new_password">Yeni Şifre</string>
    <string name="old_password">Eski Şifre</string>
    <string name="button_ok_text">Tamam</string>
    <string name="notifications">Bildirimler</string>
    <string name="date">tarih</string>
    <string name="no_notification_available">Yeni Bildiriminiz Yok</string>
    <string name="plant_problems_str">Gerekli Müdahaleler</string>
    <string name="interfered_button_string">Müdahale Edildi</string>
    <string name="cancel">İptal et</string>
    <string name="last_analysis_default_value">Analiz yapılmadı</string>
    <string name="channel_name">akilovasi-notfication</string>
    <string name="channel_description">Notifcations about plant analysis results, reminders and offers</string>
    <string name="clear_notifications">Bildirimleri Kaldır</string>
    <string name="plant_categories">Bitkiler</string>
    <string name="new_plant_add">Yeni Bitki Ekleme</string>
    <string name="anlaysis_screen">Analiz Ekranı</string>
    <string name="your_plant_name">Bitkinizin İsmi</string>
    <string name="plant_location">Bitkiniz Nerde</string>
    <string name="pot_depth">Saksınızın Derinliği</string>
    <string name="support">Destek</string>
    <string name="create_support">Destek Oluştur</string>
    <string name="my_supports">Desteklerim</string>
    <string name="support_select_plant">Bitkinizi Seçin</string>
    <string name="support_subject">Destek Konusu</string>
    <string name="support_take_picture">İlgili Fotoğraf Ekleyin</string>
    <string name="support_decription">Açıklama</string>
    <string name="support_decription_hint">Açıklamanızı Yazın</string>
    <string name="organic_content">Organik İçerikler</string>
    <string name="blog_header">Başlık</string>
    <string name="blog_preview">Blog Ön İzleme..</string>
    <string name="blog_writer">Yazan</string>
    <string name="shop">Organik Market</string>
    <string name="old_support">Eski Desteklerim</string>
    <string name="current_support">Aktif Desteklerim</string>
    <string name="shopping">Alışveriş</string>


    <string-array name="plant_depth_sizes">
        <item>&lt; 12 cm</item>
        <item>12 - 25 cm</item>
        <item>25 - 40 cm</item>
        <item>&gt; 40 cm</item>
    </string-array>

    <string-array name="support_subjects">
        <item> Ekim Süreci </item>
        <item> Toprak </item>
        <item> Bitki Hastalıkları </item>
        <item> Bit ve Diğer Haşereler </item>
    </string-array>

</resources>
