<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="android.view.View"/>
        <variable
            name="logoutClick"
            type="com.company.akilovasi.ui.main.callbacks.LogoutButtonClick" />

        <variable
            name="profileClick"
            type="com.company.akilovasi.ui.main.callbacks.ProfileButtonClick" />

        <variable
            name="notificationClick"
            type="com.company.akilovasi.ui.main.callbacks.NotificationClick" />
        
        <variable
            name="onSupportClick"
            type="com.company.akilovasi.ui.main.callbacks.OnSupportItemClick" />
        
        <variable
            name="onShopClick"
            type="com.company.akilovasi.ui.main.callbacks.OnShopClick" />
        
    </data>

    <com.company.akilovasi.util.DrawerContent
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layoutDescription="@xml/scene_main_menu"
        android:background="@color/colorMainDarkDark">

        <TextView
            android:id="@+id/menuHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/drawer_layout"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/profile"
                app:fontFamily="sans-serif-smallcaps"
                android:textColor="#FFF"
                android:onClick="@{() -> profileClick.onProfileButtonClicked()}"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/notifications"
                app:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:onClick="@{() -> notificationClick.onNotificationButtonClicked()}"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/support"
                app:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:onClick="@{ () -> leftMenuSupportLayout.getVisibility() == View.GONE ? leftMenuSupportLayout.setVisibility(View.VISIBLE) : leftMenuSupportLayout.setVisibility(View.GONE)}"
                android:textColor="#FFF" />

            <LinearLayout
                android:id="@+id/left_menu_support_layout"
                android:visibility="gone"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/left_menu_create_support_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textSize="14sp"
                    android:onClick="@{ () -> onSupportClick.onCreateSupportClick() }"
                    android:text="@string/create_support"
                    app:fontFamily="sans-serif-smallcaps"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/left_menu_active_support_ticket"
                    android:layout_width="wrap_content"
                    android:onClick="@{ () -> onSupportClick.onActiveSupportClick() }"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textSize="14sp"
                    android:text="@string/current_support"
                    app:fontFamily="sans-serif-smallcaps"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/left_menu_old_support_ticket"
                    android:onClick="@{ () -> onSupportClick.onOldSupportClick() }"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:textSize="14sp"
                    android:text="@string/old_support"
                    app:fontFamily="sans-serif-smallcaps"
                    android:textColor="#FFF" />

            </LinearLayout>

            <TextView
                android:id="@+id/left_menu_shop"
                android:onClick="@{ () -> onShopClick.onShopButtonClick() }"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/shopping"
                app:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/logout"
                app:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:onClick="@{() -> logoutClick.onLogoutButtonClicked()}"
                android:textColor="#FFF" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:background="#c2c1c1"
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menuHeader" />

    </com.company.akilovasi.util.DrawerContent>
</layout>